--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -266,6 +266,28 @@
     (set-face-attribute 'org-code nil :inherit 'fixed-pitch)
     (set-face-attribute 'org-block nil :inherit 'fixed-pitch)
    #+end_src
+** Agendas and Tags
+   By default the variable is set to nil, initialize it as an empty list so as to add stuff incrementally to it.
+#+begin_src emacs-lisp :tangle yes :exports none :results silent
+  (setq org-tag-persistent-alist '())
+#+end_src
+
+*** Eisenhower matrix
+    This can be run both on a particular buffer and in general, though in the latter case the output isn't very useful.
+#+begin_src emacs-lisp :tangle yes :exports none :results silent
+  (setq org-tag-persistent-alistersistent-alist
+        (append  org-tag-persistent-alist
+                  '(("urgent" . ?u)
+                    ("important" . ?i))))
+  (setq org-agenda-custom-commands
+        (append org-agenda-custom-commands
+                '(("i" "Eisenhower Matrix"
+                    ((tags "important&urgent")
+                    (tags "important&-urgent")
+                    (tags "urgent&-important")
+                    (tags "-urgent&-important"))))))
+#+end_src
+
 ** Exporting
 *** Disable formalities
 #+begin_src emacs-lisp :tangle yes :exports none :results silent
