--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -1,6 +1,7 @@
+#+PROPERTY: header-args :tangle yes :exports none :results silent
 * Writing
 ** Nicer font
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
 
   (add-hook 'text-mode-hook 'variable-pitch-mode)
   (global-set-key (kbd "<f5>")
@@ -8,7 +9,7 @@
   #+end_src
 ** Line highlighting
   HL-line mode is really only useful in text mode buffers where lines regularly wrap.
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (global-hl-line-mode -1)
   (add-hook 'text-mode-hook 'hl-line-mode)
 #+end_src
@@ -17,7 +18,7 @@
 
   Kudos: https://www.emacswiki.org/emacs/InsertFileName
 
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (defun ik/insert-file-name (filename &optional args)
     "Insert name of file FILENAME into buffer after point.
 
@@ -43,7 +44,7 @@
   #+end_src
 ** Insert new comment line
   While writing a comment, insert a new comment line.
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (global-set-key (kbd "<C-return>") 'comment-indent-new-line)
  #+end_src
 ** Exit enclosing delimiter
@@ -51,12 +52,12 @@
   Advantages over using the arrow key:
   - can jump out of any part of expression, not just the end
   - more ergonomic, no need to reach for the arrow key with pinky
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (global-set-key (kbd "<C-escape>") 'sp-forward-sexp)
 #+end_src
 
 ** Code/text block folding
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (add-hook 'prog-mode-hook 'outline-minor-mode)
   (add-hook 'prog-mode-hook 'hs-minor-mode)
   (with-eval-after-load 'outline
@@ -65,12 +66,12 @@
 #+end_src
 
 * Markdown
-   #+begin_src emacs-lisp :tangle yes :exports none :results silent
+   #+begin_src emacs-lisp
   (with-eval-after-load 'markdown
     (setq markdown-hide-markup t))
    #+end_src
 * Olivetti
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (add-hook 'text-mode-hook 'olivetti-mode)
   (setq olivetti-body-width 85)
  #+end_src
@@ -78,7 +79,7 @@
   By the time this config gets parsed and loaded we can assume that org is present since we're tangling with org-babel. That's why there is no need for ~with-eval-after-load~.
 ** Org Modules
    Load the following modules:
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (setq org-modules (quote
                      (org-bbdb
                       org-bibtex
@@ -97,14 +98,14 @@
 *** org-pomodoro
 **** Sounds
      The starting settings reflect the book's recommendations to have everything on by default, even the ticking sounds.
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (with-eval-after-load 'org-pomodoro
         (setq org-pomodoro-plays-sounds t)
         (setq org-pomodoro-ticking-sound-p t))
     #+end_src
 
     I exposed a simple toggling function to turn all sounds on and off, in case I have to.
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (defun ik/toggle-org-pomodoro-sounds ()
       (interactive)
       (setq org-pomodoro-play-sounds (not org-pomodoro-play-sounds))
@@ -114,7 +115,7 @@
 
 **** Notifications
      For those situations when I cannot have the volume on for whatever reason, I make org-pomodoro notifications more prominent by sending them through ~libnotify~.
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (with-eval-after-load 'alert
         (add-to-list 'alert-user-configuration '(((:category . "org-pomodoro")) libnotify nil)))
     #+end_src
@@ -124,7 +125,7 @@
      I then tweak the time when a block is considered over.
      Here's how this timer works: from the moment I start the first pomodoro of a block, measure 3 pomodoros (90 min) and another 20, instead of the default 30 minutes.
      This reflects the fact that sometimes I take a break after 3 pomodoros instead of 4 and want to be prompted to reset the timer in those cases even after a 20 minute break.
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (setq org-pomodoro-long-break-length 25)
       (setq org-pomodoro-expiry-time 110)
     #+end_src
@@ -132,7 +133,7 @@
 **** Control Panel
      The short and long break commands don't quite work, but resetting the pomodoro count does.
 
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (defun ik/org-pomodoro-reset-count ()
         (interactive)
         (setq org-pomodoro-count 0))
@@ -164,18 +165,18 @@
 ***** TODO fix short and long break dispatch
 **** TODO Measuring effort
      The first step is to configure effort values.
-     #+begin_src emacs-lisp :tangle yes :exports none :results silent
+     #+begin_src emacs-lisp
        (setq org-global-properties '(("EFFORT_ALL" . "0 1 2 3 4 5 6 7 8")))
      #+end_src
 
      I then I need to add pomodoros as allowed duration units.
     Then I should add something to org-duration-format. It's just a complicated variable.
-   #+begin_src emacs-lisp :tangle no :exports none :results silent
+   #+begin_src emacs-lisp :tangle no
      (setq org-duration-units)
      (setq org-duration-format)
    #+end_src
 *** org-habit
-   #+begin_src emacs-lisp :tangle yes :exports none :results silent
+   #+begin_src emacs-lisp
      (spacemacs/set-leader-keys
        "oh" 'org-habit-toggle-habits)
      (setq org-habit-preceding-days 30)
@@ -190,7 +191,7 @@
     Or you give up on doing it on weekends, I guess.
 ** Babel
    Extend support to some more languages that I use.
-   #+begin_src emacs-lisp :tangle yes :exports none :results silent
+   #+begin_src emacs-lisp
      (org-babel-do-load-languages
       'org-babel-load-languages
       '((dot . t)
@@ -199,7 +200,7 @@
 
 ** Colemak
   Making org-mode subtree manipulation colemak-friendly.
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (spacemacs/set-leader-keys-for-major-mode 'org-mode
     "si" 'org-demote-subtree)
   (spacemacs/set-leader-keys-for-major-mode 'org-mode
@@ -216,7 +217,7 @@
   So instead we add them to the custom prefix for orgmode.
   For now, keep `gh` as the shortcut for org-up-element.
 
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (spacemacs/set-leader-keys-for-major-mode 'org-mode
     "on" 'org-forward-element)
   (spacemacs/set-leader-keys-for-major-mode 'org-mode
@@ -224,7 +225,7 @@
   #+end_src
 ** Interleave integration
    Interleave isn't really an org package but it relies heavily on orgmode syntax.
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
     (spacemacs/set-leader-keys-for-major-mode 'org-mode
       "oi" 'interleave-mode)
     (with-eval-after-load 'interleave
@@ -233,7 +234,7 @@
 ** Inserting links
    I tried this as an alternative to org-cliplink which allowed me to enter the description of the link completely manually. This doesn't get used nearly as much as I thought it would be.
 
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (defun ik/org-cliplink (description)
     "My version of cliplink only prompts for a link description."
     (interactive "s")
@@ -243,38 +244,38 @@
 #+end_src
 ** Editing headlines
    When editing headlines, ignore tags and asterisks at beginning/end of lines respectively.
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
     (setq org-special-ctrl-a/e t)
 #+end_src
 
 ** Enable auto-completion
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (with-eval-after-load 'auto-complete
     (add-to-list 'ac-modes 'org-mode))
 #+end_src
 ** TODO org-file-apps
    I discovered that attached openoffice documents were being opened with emacs, I'd like to change that.
    Below is my first attempt at solving this, which doesn't work yet.
-   #+begin_src emacs-lisp :tangle no :exports none :results silent
+   #+begin_src emacs-lisp :tangle no
      (setq org-file-apps
            (append org-file-apps '(("\\.od[stgfb]\\'" . system))))
    #+end_src
 ** Appearance and Formatting
     Monospaced font in tables and hide markup symbols by default.
-   #+begin_src emacs-lisp :tangle yes :exports none :results silent
+   #+begin_src emacs-lisp
     (set-face-attribute 'org-table nil :inherit 'fixed-pitch)
     (set-face-attribute 'org-code nil :inherit 'fixed-pitch)
     (set-face-attribute 'org-block nil :inherit 'fixed-pitch)
    #+end_src
 ** Agendas and Tags
    By default the variable is set to nil, initialize it as an empty list so as to add stuff incrementally to it.
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (setq org-tag-persistent-alist '())
 #+end_src
 
 *** Eisenhower matrix
     This can be run both on a particular buffer and in general, though in the latter case the output isn't very useful.
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (setq org-tag-persistent-alist
         (append  org-tag-persistent-alist
                   '(("urgent" . ?u)
@@ -290,37 +291,37 @@
 
 ** Exporting
 *** Disable formalities
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (setq org-export-with-toc nil)
   (setq org-export-with-date nil)
   ;; I'm not enough of a megalomaniac to attach my name automatically to everything I produce.
   (setq org-export-with-author nil)
 #+end_src
 *** Broken Links
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (setq org-export-with-broken-links 'mark)
     #+end_src
 *** More headlines
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (setq org-export-headline-levels 4)
 #+end_src
 
 *** Export Backends
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (setq org-export-backends (quote (ascii html icalendar latex md odt)))
     #+end_src
 
 *** LaTeX
 
 **** pdf-process
-     #+begin_src emacs-lisp :tangle yes :exports none :results silent
+     #+begin_src emacs-lisp
        (setq org-latex-pdf-process
              '("latexmk -dvi- -pdf %f -output-directory=%o"))
      #+end_src
 
 **** Template for LaTeX exports
      Font and hyperref setup.
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
      (setq org-latex-packages-alist
            (append org-latex-packages-alist
                    ;; I much prefer the Libertine/Biolinum combo to the default LaTeX font.
@@ -334,7 +335,7 @@
  #+end_src
 
 **** LaTeX classes
-     #+begin_src emacs-lisp :tangle yes :exports none :results silent
+     #+begin_src emacs-lisp
        (add-to-list 'org-latex-classes
                     '("report-no-parts"
                       "\\documentclass[11pt]{report}"
@@ -348,48 +349,48 @@
 
 **** Table captions
      Captions should just be below all floats, even tables.
-     #+begin_src emacs-lisp :tangle yes :exports none :results silent
+     #+begin_src emacs-lisp
      (setq org-latex-caption-above nil)
      #+end_src
 
 
 *** Reveal.js
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (setq org-reveal-root "file:~/code/reveal.js")
     #+end_src
 *** OpenOffice
     I only use the ODT exporter to produce documents I want to share with others.
     The ODT format itself isn't as good for that as .docx, which works seamlessly with MSOffice and GDocs.
     This setting allows me to export directly to .docx without having to manually convert the ODT.
-    #+begin_src emacs-lisp :tangle yes :exports none :results silent
+    #+begin_src emacs-lisp
       (setq org-odt-preferred-output-format "docx")
     #+end_src
 
 
 * Gui elements and prompts
 ** Simpler yes/no prompt:
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (defalias 'yes-or-no-p 'y-or-n-p)
  #+end_src
 ** Golden ratio
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (golden-ratio-mode 1)
   #+end_src
 ** Modeline
   Disable major and minor mode indicators by default for a leaner mode-line.
-#+begin_src emacs-lisp :tangle yes :exports none :results silent
+#+begin_src emacs-lisp
   (setq spaceline-major-mode-p nil)
   (setq spaceline-minor-modes-p nil)
 #+end_src
 * Navigating inside buffer
 ** Lines
   Make evil-mode up/down operate in screen lines instead of logical lines.
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (define-key evil-motion-state-map "n" 'evil-next-visual-line)
   (define-key evil-motion-state-map "e" 'evil-previous-visual-line)
   #+end_src
   Also in visual mode
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (define-key evil-visual-state-map "n" 'evil-next-visual-line)
   (define-key evil-visual-state-map "e" 'evil-previous-visual-line)
   #+end_src
@@ -397,25 +398,25 @@
   It is very convenient to navigate to the beginning and end of functions, especially if they are big methods.
   The default emacs bindings for these commands are unwieldy, however, so add spacemacs hydras for them.
 
-  #+begin_src emacs-lisp :tangle yes :exports none :results silent
+  #+begin_src emacs-lisp
   (spacemacs/set-leader-keys
     "ja" 'beginning-of-defun
     "je" 'end-of-defun)
   #+end_src
 * Bookmarks
   These settings emulate VSCode's behavior, in case I ever (God forbid) need to switch.
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (global-set-key (kbd "<C-f2>") 'bm-toggle)
   (global-set-key (kbd "<f2>") 'bm-next)
   (global-set-key (kbd "<S-f2>") 'bm-previous)
  #+end_src
 * Python
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (setq python-formatter 'black)
   (setq python-test-runner 'pytest)
  #+end_src
 ** Toggle True/False
-   #+begin_src emacs-lisp :tangle yes :exports none :results silent
+   #+begin_src emacs-lisp
      (defun ik-python-toggle-bool ()
        (interactive)
        (let ((bool (thing-at-point 'word))
@@ -430,13 +431,13 @@
 * Snippets
   I have several snippets that contain other snippets and would like to be able to expand them.
 
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (setq yas-triggers-in-field t)
  #+end_src
 
 * Yaml
   Yaml folding, kudos: https://github.com/jgmize/dotfiles/blob/master/.spacemacs#L501
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (add-hook 'yaml-mode-hook
             (lambda ()
               (outline-minor-mode)
@@ -444,7 +445,7 @@
               (setq outline-regexp "^ *")))
  #+end_src
 * helm-bibtex
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
    (with-eval-after-load 'helm-bibtex
        (setq bibtex-completion-notes-path "~/Readings/bibliography/notes.org"
              bibtex-completion-bibliography '("~/Readings/bibliography/references.bib")
@@ -489,12 +490,12 @@
  #+end_src
 * LaTeX
   Open compiled LaTeX documents in PDF-Tools.
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
   (setq TeX-view-program-selection '((output-pdf "PDF Tools")))
   (add-hook 'TeX-after-TeX-LaTeX-command-finished-hook 'TeX-revert-document-buffer)
  #+end_src
 * Typing Exercises
- #+begin_src emacs-lisp :tangle yes :exports none :results silent
+ #+begin_src emacs-lisp
    (defun ik/typing-exercises ()
        "Open webpages I need to practice my typing."
        (interactive)
