--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -289,9 +289,10 @@
 ** Appearance and Formatting
     Monospaced font in tables and hide markup symbols by default.
    #+begin_src emacs-lisp
-    (set-face-attribute 'org-table nil :inherit 'fixed-pitch)
-    (set-face-attribute 'org-code nil :inherit 'fixed-pitch)
-    (set-face-attribute 'org-block nil :inherit 'fixed-pitch)
+     (with-eval-after-load 'org
+       (set-face-attribute 'org-table nil :inherit 'fixed-pitch)
+       (set-face-attribute 'org-code nil :inherit 'fixed-pitch)
+       (set-face-attribute 'org-block nil :inherit 'fixed-pitch))
    #+end_src
 ** Agendas and Tags
    By default the variable is set to nil, initialize it as an empty list so as to add stuff incrementally to it.
