--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -286,13 +286,8 @@
            (append org-file-apps '(("\\.od[stgfb]\\'" . system))))
    #+end_src
 ** Code Blocks and Tables
-    Monospaced font in tables and hide markup symbols by default.
-   #+begin_src emacs-lisp
-     (with-eval-after-load 'org
-       (set-face-attribute 'org-table nil :inherit 'fixed-pitch)
-       (set-face-attribute 'org-code nil :inherit 'fixed-pitch)
-       (set-face-attribute 'org-block nil :inherit 'fixed-pitch))
-   #+end_src
+    Monospaced font in tables and hide markup symbols by default. I ended up doing it through ~customize-group org-faces~, see that part of ~init.el~.
+
 ** Agendas and Tags
    By default the variable is set to nil, initialize it as an empty list so as to add stuff incrementally to it.
 #+begin_src emacs-lisp
