--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -368,10 +368,16 @@ Bring together the different agenda views defined in subsections.
 #+end_src
 
 ** Refiling
-  [[https://stackoverflow.com/a/21335010/4501212][This link]] finally explains the meaning of that variable the way the docs don't.
+  [[https://stackoverflow.com/a/21335010/4501212][This link]] finally explains the meaning of the variable ~org-refile-use-outline-path~ the way the docs don't.
   Basically, it lets you treat files as refile targets, with the item being refiled added to the file as a top-level heading.
    #+begin_src emacs-lisp
      (setq org-refile-use-outline-path 'file)
+     (setq org-refile-targets
+           '(("~/Documents/org/gtd.org" :maxlevel . 2)
+             ("~/Documents/org/someday.org" :maxlevel . 2)
+             ("~/Documents/org/tickler.org" :maxlevel . 2)
+             ("~/Documents/org/work/tasks.org" :maxlevel . 2)
+             ("~/Documents/org/work/rtr.org" :maxlevel . 2)))
    #+end_src
 
 *** TODO move refiling targets here
