--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -685,7 +685,7 @@ Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).
      (add-hook 'python-mode-hook
                (lambda ()
                  (setq-local dash-docs-docsets
-                             '("Python_3" "click"))))
+                             '("Python 3" "click"))))
    #+end_src
 ** Elm
    #+begin_src emacs-lisp
@@ -693,7 +693,6 @@ Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).
                (lambda ()
                  (setq-local dash-docs-docsets
                              '("Elm"))))
-
    #+end_src
 * Snippets
   I have several snippets that contain other snippets and would like to be able to expand them.
